chore: migrate to stilq-qr Firebase project, remove internal docs from repo
- Switch Firebase config to stilq-qr project
- Update Gemini model to gemini-3-flash-preview
- Remove .claude/, CLAUDE.md, QR-TOOL-DOCS.md from git tracking
- Add internal files to .gitignore

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,14 +1,5 @@
 {
   "projects": {
-    "default": "elenor-57bde"
-  },
-  "targets": {
-    "elenor-57bde": {
-      "hosting": {
-        "sqr": [
-          "sqr"
-        ]
-      }
-    }
+    "default": "stilq-qr"
   }
 }
